--- a/my-new-app/new_project2/index.html
+++ b/my-new-app/new_project2/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>somthing</title>
+    <title>Final project</title>
   </head>
-  <body style="background-color: red;">
+  <body style="background-color: rgb(255, 255, 255);">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
